--- a/css/responsive-style.css
+++ b/css/responsive-style.css
@@ -1,7 +1,44 @@
 /* TABLET */
 @media screen and (max-width: 768px) {
-    .container {
-        width: 80%;
-    }
+  .container {
+    width: 80%;
+  }
 }
 
+/* MOBILE */
+@media screen and (max-width: 480px) {
+  .container {
+    width: 100%;
+  }
+  .row {
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .col {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .lessons .col,
+  .steps .col,
+  .why-us .col {
+    width: 100%;
+  }
+  p {
+    margin-bottom: 25px;
+    margin-top: 25px;
+  }
+  .why-us h3 {
+    margin-top: 30px;
+  }
+  .why-us {
+    background-color: #222222;
+    margin-bottom: 0px;
+  }
+  .steps {
+    margin: 0 auto;
+  }
+  .why-us h2 {
+    padding-top: 40px;
+  }
+}
